@@ -1,19 +1,124 @@
 {
-    "parent": "builtin/generated",
-    "textures": {
-        "layer0": "buildingbricks:items/empty",
-        "layer1": "buildingbricks:items/trowel", "__comment": "fix tintindex issue"
-    },
-    "display": {
-        "thirdperson": {
-            "rotation": [ -90, 0, 0 ],
-            "translation": [ 0, 1, -3 ],
-            "scale": [ 0.55, 0.55, 0.55 ]
-        },
-        "firstperson": {
-            "rotation": [ 0, -135, 25 ],
-            "translation": [ 0, 4, 2 ],
-            "scale": [ 1.7, 1.7, 1.7 ]
-        }
-    }
+	"textures": {
+		"texture": "buildingbricks:items/trowel"
+	},
+	"elements": [
+		{
+			"from": [7.0, 0.0, 0.0],
+			"to": [8.0, 1.0, 1.0],
+			"faces": {
+				"north": {"texture": "#texture", "uv": [11.0, 0.0, 12.0, 1.0]},
+				"east": {"texture": "#texture", "uv": [12.0, 0.0, 13.0, 1.0]},
+				"west": {"texture": "#texture", "uv": [10.0, 0.0, 11.0, 1.0]},
+				"up": {"texture": "#texture", "uv": [3.0, 0.0, 4.0, 1.0]},
+				"down": {"texture": "#texture", "uv": [3.0, 0.0, 4.0, 1.0]}
+			}
+		},
+		{
+			"from": [6.0, 0.0, 1.0],
+			"to": [9.0, 1.0, 3.0],
+			"faces": {
+				"north": {"texture": "#texture", "uv": [10.0, 1.0, 13.0, 2.0]},
+				"east": {"texture": "#texture", "uv": [12.0, 2.0, 14.0, 3.0]},
+				"west": {"texture": "#texture", "uv": [9.0, 2.0, 11.0, 3.0]},
+				"up": {"texture": "#texture", "uv": [2.0, 1.0, 5.0, 3.0]},
+				"down": {"texture": "#texture", "uv": [2.0, 1.0, 5.0, 3.0]}
+			}
+		},
+		{
+			"from": [5.0, 0.0, 3.0],
+			"to": [10.0, 1.0, 6.0],
+			"faces": {
+				"north": {"texture": "#texture", "uv": [9.0, 3.0, 14.0, 4.0]},
+				"east": {"texture": "#texture", "uv": [12.0, 4.0, 15.0, 5.0]},
+				"west": {"texture": "#texture", "uv": [8.0, 4.0, 11.0, 5.0]},
+				"up": {"texture": "#texture", "uv": [1.0, 3.0, 6.0, 6.0]},
+				"down": {"texture": "#texture", "uv": [1.0, 3.0, 6.0, 6.0]}
+			}
+		},
+		{
+			"from": [4.0, 0.0, 6.0],
+			"to": [11.0, 1.0, 9.0],
+			"faces": {
+				"north": {"texture": "#texture", "uv": [8.0, 5.0, 15.0, 6.0]},
+				"east": {"texture": "#texture", "uv": [12.0, 4.0, 15.0, 5.0]},
+				"south": {"texture": "#texture", "uv": [8.0, 7.0, 15.0, 8.0]},
+				"west": {"texture": "#texture", "uv": [8.0, 4.0, 11.0, 5.0]},
+				"up": {"texture": "#texture", "uv": [0.0, 6.0, 7.0, 9.0]},
+				"down": {"texture": "#texture", "uv": [0.0, 6.0, 7.0, 9.0]}
+			}
+		},
+		{
+			"from": [5.0, 0.0, 9.0],
+			"to": [10.0, 1.0, 10.0],
+			"faces": {
+				"east": {"texture": "#texture", "uv": [14.0, 8.0, 15.0, 9.0]},
+				"south": {"texture": "#texture", "uv": [9.0, 9.0, 14.0, 10.0]},
+				"west": {"texture": "#texture", "uv": [8.0, 8.0, 9.0, 9.0]},
+				"up": {"texture": "#texture", "uv": [1.0, 9.0, 6.0, 10.0]},
+				"down": {"texture": "#texture", "uv": [1.0, 9.0, 6.0, 10.0]}
+			}
+		},
+		{
+			"from": [6.0, 0.0, 10.0],
+			"to": [9.0, 1.0, 11.0],
+			"faces": {
+				"east": {"texture": "#texture", "uv": [13.0, 10.0, 14.0, 11.0]},
+				"south": {"texture": "#texture", "uv": [10.0, 11.0, 13.0, 12.0]},
+				"west": {"texture": "#texture", "uv": [9.0, 10.0, 10.0, 11.0]},
+				"up": {"texture": "#texture", "uv": [2.0, 10.0, 5.0, 11.0]},
+				"down": {"texture": "#texture", "uv": [2.0, 10.0, 5.0, 11.0]}
+			}
+		},
+		{
+			"from": [7.0, 0.0, 11.0],
+			"to": [8.0, 1.0, 12.0],
+			"faces": {
+				"east": {"texture": "#texture", "uv": [12.0, 12.0, 13.0, 13.0]},
+				"south": {"texture": "#texture", "uv": [11.0, 13.0, 12.0, 14.0]},
+				"west": {"texture": "#texture", "uv": [10.0, 12.0, 11.0, 13.0]},
+				"up": {"texture": "#texture", "uv": [3.0, 11.0, 4.0, 12.0]},
+				"down": {"texture": "#texture", "uv": [3.0, 11.0, 4.0, 12.0]}
+			}
+		},
+		{
+			"from": [7.0, 1.0, 9.0],
+			"to": [8.0, 3.0, 10.0],
+			"faces": {
+				"north": {"texture": "#texture", "uv": [13.0, 13.0, 14.0, 15.0]},
+				"east": {"texture": "#texture", "uv": [12.0, 13.0, 13.0, 15.0]},
+				"south": {"texture": "#texture", "uv": [14.0, 13.0, 15.0, 15.0]},
+				"west": {"texture": "#texture", "uv": [15.0, 13.0, 16.0, 15.0]}
+			}
+		},
+		{
+			"from": [7.0, 3.0, 9.0],
+			"to": [8.0, 4.0, 16.0],
+			"faces": {
+                "north": { "texture": "#texture", "uv": [ 9.0, 15.0, 10.0, 16.0 ] },
+                "east": { "texture": "#texture", "uv": [ 0.0, 14.0, 7.0, 15.0 ] },
+                "south": { "texture": "#texture", "uv": [ 7.0, 8.0, 8.0, 9.0 ] },
+                "west": { "texture": "#texture", "uv": [ 7.0, 15.0, 0.0, 16.0 ] },
+                "up": { "texture": "#texture", "uv": [ 8.0, 16.0, 9.0, 9.0 ] },
+                "down": { "texture": "#texture", "uv": [ 7.0, 9.0, 8.0, 16.0 ] }
+			}
+		}
+	],
+	"display": {
+		"thirdperson": {
+			"rotation": [10, 0, -180],
+			"translation": [-0.4, -0.48, -3.6],
+			"scale": [1, 1, 1]
+		},
+		"firstperson": {
+			"rotation": [30, -45, 10],
+			"translation": [-4, 8, 2.4],
+			"scale": [1.3, 1.3, 1.3]
+		},
+		"gui": {
+			"rotation": [45, 90, 35],
+			"translation": [2, 1, 0],
+			"scale": [1.1, 1.1, 1.1]
+		}
+	}
 }
